loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:11: error: reassignment to val
    quartdetour = quartdetour + 1
                ^